--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon --watch backend --exec node --experimental-modules backend/server.js",
-    "build:dev": "dotenv -e .env.development react-scripts build"
+    "build": ""
   },
   "author": "",
   "license": "ISC",
