update list user

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --watch backend --exec node --experimental-modules backend/server.js",
-    "build": "react-scripts build"
+    "build": "cd frontend && npm install && npm run build",
+    "start": "nodemon --watch backend --exec node --experimental-modules backend/server.js"
   },
   "author": "",
   "license": "ISC",
@@ -24,4 +24,5 @@
     "nodemon": "^2.0.20",
     "react-scripts": "^5.0.1"
   }
+  
 }
